--- a/css/sfavorites-styles.css
+++ b/css/sfavorites-styles.css
@@ -29,7 +29,7 @@
     -o-transition: all 200ms ease;
     transition: all 200ms ease
 }
-.stellar-favorite.active {
+.stellar-favorite.sfavorite-active {
     background-color: #333;
     color: #fff;
     border-color: #333;
